[package]
name = "infinity-board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive", "cargo"] }
derive_more = "0.99.17"
itertools = "0.10.5"
strum = { version = "0.24.1", features = ["derive"] }
